# SinoQuantis

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
src/sinoquantis/: __init__.py  cli.py  config.py  db.py  web.py
src/sinoquantis/data_sources/: akshare_client.py  cninfo_client.py  tushare_client.py
src/sinoquantis/pipelines/: update_adj_factor.py  update_calendar.py  update_daily_bar.py  update_filings.py  update_financials.py  update_stock_basic.py
src/sinoquantis/storage/: schema.sql
tests/: test_cli.py  test_db.py  test_filings.py  test_pipelines.py  test_web.py
